[package]
name = "ps-cypher"
version = "0.1.0-19"
edition = "2021"
description = "Chacha-based data cypher"
license = "GPL-3.0-or-later"

[dependencies]
chacha20poly1305 = "0.10.1"
ps-base64 = "0.1.0-5"
ps-buffer = "0.1.0-19"
ps-deflate = "0.1.0-14"
ps-ecc = "0.1.0-4"
ps-hash = "0.1.0-15"
ps-pint16 = "0.1.0-4"
thiserror = "2.0.12"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
