[package]
name = "ps-cypher"
version = "0.1.0-24"
edition = "2021"
description = "Chacha-based data cypher"
license = "GPL-3.0-or-later"

[dependencies]
chacha20poly1305 = "0.10.1"
ps-base64 = "0.1.0-6"
ps-buffer = "0.1.0-20"
ps-deflate = "0.1.0-15"
ps-ecc = "0.1.0-7"
ps-hash = "0.1.0-23"
ps-pint16 = "0.1.0-4"
ps-util = "0.1.0-4"
thiserror = "2.0.17"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
