[package]
name = "ps-cypher"
version = "0.1.0-28"
edition = "2021"
description = "Chacha-based data cypher"
license = "GPL-3.0-or-later"

[dependencies]
chacha20poly1305 = "0.10.1"
ps-base64 = "0.1.0-6"
ps-buffer = "0.1.0-21"
ps-compress = "0.1.0-17"
ps-ecc = "0.1.0-8"
ps-hash = "0.1.0-24"
ps-pint16 = "0.1.0-4"
ps-util = "0.1.0-6"
thiserror = "2.0.18"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
